--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,10 @@
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa {{ element.icon }} fa-stack-1x fa-inverse"></i>
                 </span>
+                <span class="ai-stack ai-lg" aria-hidden="true">
+                  <i class="ai ai-circle ai-stack-2x"></i>
+                  <i class="ai {{ element.icon }} ai-stack-1x ai-inverse"></i>
+                </span>
                 <span class="sr-only">{{ element.name }}</span>
               </a>
             </li>
